# ProdRescue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PRODRESCUE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
infra/: main.tf  prometheus.yml  variables.tf
infra/db/: init.sql
infra/grafana/dashboards/: prodrescue.json
infra/k8s/: api-deployment.yaml  celery-worker-hpa.yaml  namespace.yaml  worker-deployment.yaml
scripts/: demo.sh  inject_crash.sh  seed_incidents.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py
scripts/crashes/: 01_payments_none.json  02_payments_currency.json  03_payments_split_zero.json  04_auth_token.json  05_payments_empty.json
services/: config.py  logging_setup.py
services/agents/: graph.py  llm.py  mcp_clients.py  nodes.py  patching.py  persistence.py  prompts.py  state.py  tracing.py
services/api/: Dockerfile  database.py  embeddings.py  main.py  metrics.py  ratelimit.py  tasks.py
services/mcp_servers/harness/: Dockerfile  compose.py  server.py
services/mcp_servers/logs_db/: server.py
services/schemas/: models.py
tests/: conftest.py
tests/integration/: test_agent_pipeline.py  test_ingest_endpoint.py
tests/unit/: test_api_endpoints.py  test_compose_and_config.py  test_coverage_gate.py  test_dev_node.py  test_embeddings_metrics.py  test_graph_loop.py  test_harness_spec.py  test_logs_db_server.py  test_mcp_clients.py  test_patching.py  test_pr3.py  test_ratelimit.py  test_triage_node.py
(+1 files in other folders)
